Small changes, not critical functionality updates. Change to index.css to center-align the comment editing tools (edit, delete links). Single change to footer.php to stop the page scrolling up when you click a comment's "edit" link. Deleted a pile of commented-out code in submit_comment.php and changed a log debug output comment, no critical changes.

--- a/Terptube-Mockup-Paul/css/index.css
+++ b/Terptube-Mockup-Paul/css/index.css
@@ -249,6 +249,7 @@ html[xmlns] .clearfix {
     width: 100%;
     float: left;
     display: inline-block;
+    text-align: center;
 }
 
 .comment-tools-div ul li,a {
